Fixes line wrapping for three-char month abbreviations

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -18,20 +18,44 @@ canvas {
 }
 
 main {
-  letter-spacing: 4px;
-  max-width: 320px;
   word-break: break-all;
-
-  &:first-line {
-    letter-spacing: 10.5px;
-  }
+  max-width: 320px;
 
   @include from(568px) {
     max-width: 568px;
-    letter-spacing: 1.8px;
+  }
+
+
+  &.three-char {
+    letter-spacing: 4px;
 
     &:first-line {
-      letter-spacing: 4px;
+      letter-spacing: 10.5px;
+    }
+
+    @include from(568px) {
+      letter-spacing: 1.8px;
+
+      &:first-line {
+        letter-spacing: 4px;
+      }
+    }
+  }
+
+
+  &.four-char {
+    letter-spacing: 8px;
+
+    &:first-line {
+      letter-spacing: 8px;
+    }
+
+    @include from(568px) {
+      letter-spacing: 2.6px;
+
+      &:first-line {
+        letter-spacing: 3px;
+      }
     }
   }
 }
